<resources>
  <string name="app_name">Autogyro</string>

  <string name="label_intro">Autogyro</string>

  <string name="label_library_info">Libraries</string>
  <string name="label_help_feedback">Help &amp; Feedback</string>

  <string name="help_website">Website</string>
  <string name="help_bug_report">Report an issue</string>
  <string name="help_repository">GitHub Repository</string>
  <string name="help_email">Email</string>

  <string name="intro_slide_permission_grant">Grant permission</string>

  <!-- Intro welcome slide -->

  <string name="intro_slide_welcome_title">Welcome to Autogyro!</string>
  <string name="intro_slide_welcome_description">Manually adjust your device\u2019s orientation, no gyroscope needed. To start setting up Autogyro, press the arrow or swipe left.</string>
  <string name="intro_slide_welcome_description_m">Manually adjust your device\u2019s orientation, no gyroscope needed. Before you can use Autogyro, you\u2019ll need to grant it a few permissions.</string>

  <!-- Intro overlay permission slide -->

  <string name="intro_slide_overlay_permission_return_message">Tap \u2018back\u2019 to finish setting up Autogyro.</string>
  <string name="intro_slide_overlay_permission_not_granted">Autogyro needs the overlay permission before continuing.</string>

  <string name="intro_slide_overlay_permission_title">Allow overlay access</string>
  <string name="intro_slide_overlay_permission_description">Autogyro locks your device\u2019s orientation using a view that\u2019s always on top, no matter what app you\u2019re using. To do this, Autogyro needs to be able to draw on top of other apps.</string>

  <!-- Intro settings permission slide -->

  <string name="intro_slide_settings_permission_return_message">Tap \u2018back\u2019 to finish setting up Autogyro.</string>
  <string name="intro_slide_settings_permission_not_granted">Autogyro needs the settings permission before continuing.</string>

  <string name="intro_slide_settings_permission_title">Allow settings access</string>
  <string name="intro_slide_settings_permission_description">To lock your device\u2019s orientation, Autogyro needs to disable the system-wide auto-rotate setting.</string>

  <!-- Intro control slide -->

  <string name="intro_slide_control_title">Controlling Autogyro</string>
  <string name="intro_slide_control_description">Select which control methods you\u2019d like to use.</string>
  <string name="intro_slide_control_at_least_one_method">There needs to be at least one control method</string>

  <!-- Intro ready slide -->

  <string name="intro_slide_ready_title">You\u2019re ready to go!</string>
  <string name="intro_slide_ready_description">Thank you for using Autogyro.</string>

  <string name="autogyro_use">Enable Autogyro</string>

  <!-- Control method notification -->

  <string name="control_method_notification">Notification</string>

  <string name="control_method_notification_use">Enable notification</string>

  <string name="control_method_notification_priority">Notification priority</string>

  <string name="control_method_notification_show_left">Show rotate left button</string>
  <string name="control_method_notification_show_right">Show rotate right button</string>
  <string name="control_method_notification_show_flip">Show flip button</string>
  <string name="control_method_notification_show_settings">Show settings button</string>

  <string name="control_method_notification_show_left_extra">Show rotate left button in notification</string>
  <string name="control_method_notification_show_right_extra">Show rotate right button in notification</string>
  <string name="control_method_notification_show_flip_extra">Show flip button in notification</string>
  <string name="control_method_notification_show_settings_extra">Show settings button in notification</string>

  <string name="control_method_use_quick_settings">Quick Settings tile</string>
  <string name="control_method_use_gestures">Gestures</string>

  <!-- Notification buttons -->

  <string name="label_notification_left">Left</string>
  <string name="label_notification_right">Right</string>
  <string name="label_notification_flip">Flip</string>

  <!-- Quick settings tiles -->

  <string name="label_tile_left">Rotate Left</string>
  <string name="label_tile_right">Rotate Right</string>
  <string name="label_tile_flip">Flip</string>

  <!-- Preferences screen -->

  <string name="preferences_advanced">Advanced</string>

  <!-- Menu -->

  <string name="menu_library_info">Libraries</string>
  <string name="menu_help_feedback">Help &amp; feedback</string>


</resources>
