<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <SwitchPreference
    android:key="enabled"
    android:title="@string/autogyro_use"
    android:defaultValue="true"
    />

  <PreferenceCategory
    android:title="@string/control_method_notification">

  <SwitchPreference
      android:key="show_notification"
      android:title="@string/control_method_notification_use"
      android:defaultValue="@bool/control_method_notification_use"
      />

    <CheckBoxPreference
      android:key="show_notification_left"
      android:title="@string/control_method_notification_show_left"
      android:defaultValue="@bool/control_method_notification_show_left"
      />

    <CheckBoxPreference
      android:key="show_notification_right"
      android:title="@string/control_method_notification_show_right"
      android:defaultValue="@bool/control_method_notification_show_right"
      />

    <CheckBoxPreference
      android:key="show_notification_flip"
      android:title="@string/control_method_notification_show_flip"
      android:defaultValue="@bool/control_method_notification_show_flip"
      />

  </PreferenceCategory>

  <PreferenceCategory
    android:title="@string/preferences_advanced">

    <CheckBoxPreference
      android:key="show_notification_settings"
      android:title="@string/control_method_notification_show_settings_extra"
      android:defaultValue="@bool/control_method_notification_show_settings"
      />

    <ListPreference
      android:key="notification_priority"
      android:title="@string/control_method_notification_priority"
      android:entries="@array/notification_priority"
      android:entryValues="@array/notification_priority_values"
      android:defaultValue="4"
      />

  </PreferenceCategory>

</PreferenceScreen>
